<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Automation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bselect">Select btSerial device from paired devices:</string>
    <string name="led1">Switch1</string>
    <string name="led2">Switch2</string>
    <string name="led3">Switch3</string>
    <string name="led4">Switch4</string>
    <string name="led5">Switch5</string>
    <string name="led6">Switch6</string>
    <string name="led7">Switch7</string>
    <string name="led8">Switch8</string>
    <string name="hub">HUB:</string>
    <string name="ha">HOME AUTOMATION</string>
    <string name="ifdevice">If no devices are listed please pair your device in Android settings</string>
    <string name="ab">About App</string>
    <string name="emg">Energy</string>
    <string name="settimer">Set Timer</string>
    <string name="entermin">Enter No. of min</string>
    <string name="fa">Fan</string>
    <string name="faspeed">Fan Speed:0</string>
    

</resources>
