<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:paddingTop="@dimen/activity_vertical_margin" >
 
    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:text="@string/led2" />

    <TextView
        android:id="@+id/txtString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginTop="36dp"
        android:text="@string/hub"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/white"
        android:text="@string/led3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignLeft="@+id/button2"
        android:textColor="@android:color/white"
        android:text="@string/led4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button7"
        android:layout_alignLeft="@+id/button4"
        android:textColor="@android:color/white"
        android:text="@string/led6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button7"
        android:layout_alignBottom="@+id/button7"
        android:textColor="@android:color/white"
        android:layout_alignLeft="@+id/button6"
        android:text="@string/led8" />

    <Button
        android:id="@+id/button5"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:textColor="@android:color/white"
        android:layout_marginTop="29dp"
        android:text="@string/led5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="28dp"
        android:textColor="@android:color/white"
        android:text="@string/led7" />

    <Button
        android:id="@+id/button1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtString"
        android:layout_below="@+id/txtString"
        android:layout_marginTop="47dp"
        android:textColor="@android:color/white"
        android:text="@string/led1" />
 
</RelativeLayout>